--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,14 @@ dependencies:
 
 library:
   source-dirs: src
+  ghc-options: 
+  - -Wall
+  - -Wcompat
+  - -Wincomplete-record-updates
+  - -Wincomplete-uni-patterns
+  - -Wredundant-constraints
+  - -Wno-unused-top-binds
+  - -Werror 
 
 executables:
   reunion-in-purple-exe:
@@ -37,13 +45,3 @@ executables:
     dependencies:
     - reunion-in-purple
 
-tests:
-  reunion-in-purple-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - reunion-in-purple
