--- a/reunion-in-purple.cabal
+++ b/reunion-in-purple.cabal
@@ -30,6 +30,7 @@ library
       Paths_reunion_in_purple
   hs-source-dirs:
       src
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -Werror
   build-depends:
       base >=4.7 && <5
     , sbv
@@ -41,20 +42,6 @@ executable reunion-in-purple-exe
       Paths_reunion_in_purple
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , reunion-in-purple
-    , sbv
-  default-language: Haskell2010
-
-test-suite reunion-in-purple-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_reunion_in_purple
-  hs-source-dirs:
-      test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
