--- a/reunion-in-purple.cabal
+++ b/reunion-in-purple.cabal
@@ -30,7 +30,7 @@ library
       Paths_reunion_in_purple
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -Werror
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds
   build-depends:
       base >=4.7 && <5
     , sbv
